--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "serve": "node server.js",
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start --port 3020",
@@ -10,8 +11,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
     "ant-design-vue": "^1.7.8",
     "core-js": "^3.19.3",
+    "express": "^4.18.1",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
